2008-02-21  Glenn Morris  <rgm@gnu.org>

	* composite.el (encode-composition-rule): Fix typo in error message.
	(composition-function-table, auto-composition-mode): Doc fixes.

	* subr.el (sit-for): Fix obsolete form for nil second argument.

2008-02-21  Kenichi Handa  <handa@ni.aist.go.jp>

	* composite.el (compose-chars-after): Fix arguments for a function
	in composition-function-table.
	(auto-compose-region): Likewise.

	* ps-mule.el (ps-mule-font-info-database-bdf): Use
	ethio16f-uni.bdf for Ethiopic.
	(ps-mule-plot-string): Ignore glyph-string based compositions.

2008-02-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el: Allow different windows to show different pages.
	(doc-view-current-page, doc-view-current-slice, doc-view-current-info)
	(doc-view-current-image, doc-view-current-overlay): Remove variables,
	add them back as macros instead, using image-mode-winprops instead.
	Update all users of those variables.
	(doc-view-new-window-function): New function to create a new overlay
	for each new window.
	(doc-view-mode): Use it and image-mode-setup-winprops.
	(doc-view-clone-buffer-hook): Rewrite accordingly.

	* image-mode.el: Extend [hv]scroll support to per-window properties.
	(image-mode-current-vscroll, image-mode-current-hscroll): Remove.
	(image-mode-winprops-alist): New var to replace them.
	(image-mode-new-window-functions): New hook.
	(image-mode-winprops, image-mode-window-get, image-mode-window-put):
	New funs.
	(image-set-window-vscroll, image-set-window-hscroll): Use them.
	Remove the `window' argument, update callers.
	(image-mode-reapply-winprops): Rename image-reset-current-vhscroll.
	Use the new functions.
	(image-mode-reapply-winprops): New fun.
	(image-mode): Use it.

2008-02-20  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-math.el (math-sin-raw): Add optional argument
	to keep track of original argument.
	(math-cos-raw): Use optional argument when calling
	math-sin-raw.