@@ -1,3 +1,12 @@
+2008-02-21  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el (vc-status-mark, vc-status-unmark): New functions.
+	(vc-status-mode-map, vc-status-mode-menu): Mark them instead for
+	vc-status-mark-file and vc-status-unmark-file.
+	(vc-status-mark-unmark): New function.
+	(vc-status-previous-line, vc-status-mark-all-files): No longer
+	interactive.
+
 2008-02-21  Glenn Morris  <rgm@gnu.org>
 
 	* composite.el (encode-composition-rule): Fix typo in error message.
